[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ComfyUI-Stash"
version = "1.0.0"
description = "Stash nodes for ComfyUI"
authors = [
  {name = "Zyqu Onrel", email = "zyquonrel@gmail.com"}
]
readme = "README.md"
license = {text = "Apache Software License 2.0"}
classifiers = []
dependencies = [
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
    "requests>=2.30.0"
]

[project.optional-dependencies]
dev = [
    "ariadne-codegen>=0.14.0",
    "bump-my-version",
    "coverage",  # testing
    "mypy",  # linting
    "pre-commit", # runs linting on commit
    "pytest",  # testing
    "ruff",  # linting
]

[project.urls]
bugs = "https://github.com/zyquon/ComfyUI-Stash/issues"
homepage = "https://github.com/zyquon/ComfyUI-Stash"
Repository = "https://github.com/zyquon/comfyui-stash" # Used by Comfy Registry

[tool.comfy]
PublisherId = "zyquon"
DisplayName = "ComfyUI Stash"
Icon = ""

[tool.ariadne-codegen]
remote_schema_url = "http://fs.local:9999/graphql"
remote_schema_headers = {"ApiKey" = "$STASH_API_KEY"}
queries_path = "queries.graphql"
target_package_name = "stash_client"
client_name = "Stash"
async_client = false

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py39"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102",  # exec-builtin
    "S307",  # eval-used
    "W293",
    "F",  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
